--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li>Ninja Shaun</li>
             </ul>
         </div>
+        <p>This is an <a href="#">inline</a> comment</p>
 
 </body>
 </html>
