--- a/HTML-5-Semantics/index.html
+++ b/HTML-5-Semantics/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>HTML 5 Semantics</title>
 </head>
-<link rel="stylesheet" href="css/style.css">
+
 <body>
     <header>
         <h1>MarioClub</h1>
